--- a/LojourProperties.Web/Pages/Shared/Components/Footer/Default.cshtml
+++ b/LojourProperties.Web/Pages/Shared/Components/Footer/Default.cshtml
@@ -8,9 +8,9 @@
                 <div class="col-md-3  col-sm-6 col-xs-12">
                     <!-- Info Widget -->
                     <div class="widget">
-                        <div class="logo"> <img alt="" src="~/img/lojour-logo-web-2.png"> </div>
+                        <div class="logo"> <img alt="" src="~/img/lojour-logo-green.png"> </div>
                         <p>
-                            Lojour® is a property listing platform well known for helping real estate agencies and valuators showcase their various properties to prospective clients
+                            Lojour® is a property listing platform well known for helping property owners, agents and valuers showcase their various properties to prospective clients. The fastest in closing deals.
                         </p>
 
                     </div>
@@ -50,10 +50,10 @@
                 <div class="col-md-5  col-sm-6 col-xs-12">
                     <!-- Newslatter -->
                     <div class="widget widget-newsletter">
-                        <h5>Singup for Weekly Newsletter</h5>
+                        <h5>Singup for latest updates on properties</h5>
                         <div class="fieldset">
                             <p>
-                                Get updated on our weekly events and properties
+                                <br />
                             </p>
                             <form>
                                 <input class="" value="Enter your email address" type="text">
