--- a/LojourProperties.Web/Pages/Shared/_Layout.cshtml
+++ b/LojourProperties.Web/Pages/Shared/_Layout.cshtml
@@ -298,7 +298,7 @@
         }
 
         .btn-theme {
-            padding: 5px 5px !important;
+            padding: 12px 18px !important;
         }
     </style>
     <style>
@@ -340,6 +340,21 @@
             .video-container {
                 flex-direction: column; /* Stack video on top of controls on smaller screens */
             }
+        }
+        .btn-warning {
+            color: #fff;
+            background-color: #f0ad4e;
+            border-color: #eea236;
+        }
+        .btn-danger {
+            color: #fff;
+            background-color: #d9534f;
+            border-color: #d43f3a;
+        }
+        .btn-primary {
+            color: #fff;
+            background-color: #337ab7;
+            border-color: #2e6da4;
         }
     </style>
 </head>
