--- a/LojourProperties.Web/Pages/Ppty.cshtml
+++ b/LojourProperties.Web/Pages/Ppty.cshtml
@@ -88,9 +88,9 @@
                                     <div class="heading-panel">
                                         <h3 class="">
                                             Property Features
-                                            <a class="btn btn-success" style="float: right;color: #fff;background-color: grey;border-color: grey;width: 25%;">ID: @Model.Property.PropertyRefID</a>
+                                            <a class="btn btn-success" style="float: right;color: #fff;background-color: grey;border-color: grey;">ID: @Model.Property.PropertyRefID</a>
 
-                                            <a class="btn btn-success" style="float: right;color: #fff;background-color: #396739;border-color: grey;width: 25%;">
+                                            <a class="btn btn-success" style="float: right;color: #fff;background-color: #396739;border-color: grey;">
                                                 @if (Model.Property.PropertyCategory.Name.ToLower().Contains("sale"))
                                                 {
                                                     <span>For Sale</span>
