--- a/LojourProperties.Web/Pages/Shared/Components/DistressProperty/Default.cshtml
+++ b/LojourProperties.Web/Pages/Shared/Components/DistressProperty/Default.cshtml
@@ -84,7 +84,7 @@
                             <div class="ad-meta">
                                 <a class="btn btn-success" asp-page="./Ppty" asp-route-id="@item.Id" asp-route-ppy="@item.Title.Replace(",", "-").Replace(" ", "-").Replace("/", "-").Replace("@", "-").Replace("&", "-").Replace("#", "-").Replace("_", "-").Replace("--", "-").Replace("--", "-")" style="width: 70%;"><i class="fa fa-phone"></i> Details</a>
 
-                                <a class="btn btn-success" href="#" style="float: right;color: #fff;background-color: grey;border-color: grey;width: 25%;">ID: @item.LojourID</a>
+                                <a class="btn btn-success" href="#" style="float: right;color: #fff;background-color: grey;border-color: grey;">ID: @item.LojourID</a>
                             </div>
                         </div>
                     </div>
