--- a/LojourProperties.Web/Areas/Admin/Pages/V1/PropertyPage/Index.cshtml
+++ b/LojourProperties.Web/Areas/Admin/Pages/V1/PropertyPage/Index.cshtml
@@ -35,39 +35,41 @@
                 <thead>
                     <tr>
                         <th>S/N</th>
-            <th>
-                @Html.DisplayNameFor(model => model.Property[0].Title)
-            </th>
-            <th> 
-                ID
-            </th>
-            
-            <th>
-                Date
-            </th>
-            <th>
-                Amount
-            </th>
-            
-            <th>
-                Category
-            </th>
-            <th>
-                Link
-            </th>
-            <th>
-                Status
-            </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Property[0].Title)
+                        </th>
+                        <th>
+                            ID
+                        </th>
+                        <th>
+ Location
+                        </th>
+                        <th>
+                            Date
+                        </th>
+                        <th>
+                            Amount
+                        </th>
+
+                        <th>
+                            Category
+                        </th>
+                        <th>
+                            Link
+                        </th>
+                        <th>
+                            Status
+                        </th>
                         <th>
                             Activity
                         </th>
-                       <th>Agent</th>
+                        <th>Agent</th>
                         <th>
                             @Html.DisplayNameFor(model => model.Property[0].SortOrder)
                         </th>
 
-            <th></th>
-        </tr>
+                        <th></th>
+                    </tr>
                 </thead>
                 
                 @{
@@ -87,17 +89,19 @@
                                 <a asp-page="./Details" asp-route-id="@item.Id">
                                     @Html.DisplayFor(modelItem => item.Title)
                                 </a>
-                                
+
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.PropertyRefID)
                             </td>
-
+                            <td>
+                                @Html.DisplayFor(modelItem => item.CityLocation.Name)
+                            </td>
                             <td>
                                 @item.DateAdded.Date
                             </td>
                             <td>
-                                @string.Format("₦{0:N0}", item.Amount) 
+                                @string.Format("₦{0:N0}", item.Amount)
                             </td>
 
                             <td>
@@ -108,10 +112,10 @@
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.PropertyStatus)
-                                @if(item.Distress == true)
-                {
-                    <span style="margin-right:6px;"><strong>(Distress)</strong></span>
-                }
+                                @if (item.Distress == true)
+                                {
+                                    <span style="margin-right:6px;"><strong>(Distress)</strong></span>
+                                }
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.ActivityStatus)
