--- a/LojourProperties.Web/Pages/Shared/_Layout.cshtml
+++ b/LojourProperties.Web/Pages/Shared/_Layout.cshtml
@@ -356,7 +356,68 @@
             background-color: #337ab7;
             border-color: #2e6da4;
         }
+
+
+
     </style>
+
+    <style>
+        .ads-list-archive {
+            background-color: #fff;
+            box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.1);
+            color: #777;
+            display: block;
+            margin-bottom: 30px;
+            position: relative;
+            float: left;
+            width: 100%;
+            overflow: hidden;
+            border-radius: 10px;
+        }
+
+        .btn-success {
+            float: right;
+            color: #fff;
+            background-color: #396739;
+            border-color: grey;
+            width: 25%;
+            padding: 5px;
+            border-radius: 5px;
+        }
+
+            .btn-success:hover {
+                color: #fff;
+                background-color: #449d44;
+                border-color: #398439;
+                border-radius: 5px;
+            }
+
+        .ad-archive-desc .ad-meta .btn {
+            border-radius: 5px;
+        }
+
+        .btn {
+            float: right;
+            color: #fff;
+            background-color: #396739;
+            border-color: grey;
+            width: 25%;
+            padding: 5px;
+            border-radius: 5px;
+        }
+
+        .ad-archive-img {
+            overflow: hidden;
+            position: relative;
+            border-radius: 5px 5px 0px 0px;
+        }
+
+        .btn-theme {
+            padding: 12px 18px !important;
+            border-radius: 5px;
+        }
+    </style>
+
 </head>
 <body>
     <!-- =-=-=-=-=-=-= Preloader =-=-=-=-=-=-= -->
