--- a/LojourProperties.Web/Pages/Shared/_Main.cshtml
+++ b/LojourProperties.Web/Pages/Shared/_Main.cshtml
@@ -155,7 +155,7 @@
                 <nav class="mt-2">
                     <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                         <!-- Add icons to the links using the .nav-icon class
-         with font-awesome or any other icon font library -->
+    with font-awesome or any other icon font library -->
                         <li class="nav-header" style="background-color: #c8cacc;border-radius: 4px;font-weight: bolder;color: black;">DASHBOARD</li>
                         <li class="nav-item">
                             <a asp-page="/Admin/Index" asp-area="Main" class="nav-link">
@@ -242,6 +242,24 @@
                                 </p>
                             </a>
                         </li>
+
+                        <li class="nav-item">
+                            <a asp-page="/IContactUs/Index" asp-area="Main" class="nav-link">
+                                <i class="nav-icon fas fa-globe"></i>
+                                <p>
+                                    Contact Us
+                                </p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a asp-page="/INewsletter/Index" asp-area="Main" class="nav-link">
+                                <i class="nav-icon fas fa-globe"></i>
+                                <p>
+                                    Newsletter
+                                </p>
+                            </a>
+                        </li>
+
                         <li class="nav-item">
                             <a asp-page="/PropertySection/FeatureCategory/Index" asp-area="Main" class="nav-link">
                                 <i class="nav-icon fas fa-home"></i>
