--- a/LojourProperties.Web/Pages/Property.cshtml
+++ b/LojourProperties.Web/Pages/Property.cshtml
@@ -29,24 +29,93 @@
         <div class="row">
             @if (!String.IsNullOrEmpty(Model.Query) || Model.Fine == true)
             {
-                <div class="container">
-                    <div class="alert-box-container margin-top-30">
-                        <div class="well">
 
-                            <form method="get">
-                                <div class="row">
-                                    <div class="col-md-9 col-xs-12 col-sm-12">
-                                        <input placeholder="Property, Location" name="searchString" type="text" value="@Model.Query" class="form-control">
-                                    </div>
+                <style>
+                    .search-form {
+                        position: relative;
+                        width: 100%;
+                        border: 1px solid black;
+                    }
 
-                                    <div class="col-md-3 col-xs-12 col-sm-12">
-                                        <input class="btn btn-theme btn-block" style="padding: 12px 52px !important;" value="Submit" type="submit">
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
+                        .search-form .search-field {
+                            display: block;
+                            border: none;
+                            border-radius: 0;
+                            font-size: 3rem;
+                            -webkit-appearance: none;
+                            -moz-appearance: none;
+                            appearance: none;
+                        }
+
+                        .search-form .search-submit {
+                            display: block;
+                            border: none;
+                            border-radius: 0;
+                            font-size: 1.5rem;
+                            -webkit-appearance: none;
+                            -moz-appearance: none;
+                            appearance: none;
+                        }
+
+                        .search-form .search-field {
+                            width: 100%;
+                            padding: 1.3rem;
+                            padding-right: 8.05rem;
+                            position: relative;
+                            top: 0;
+                            border: none;
+                            background: #eee;
+                            color: #000;
+                        }
+
+                            .search-form .search-field::-moz-placeholder {
+                                color: #ccc;
+                            }
+
+                            .search-form .search-field:-ms-input-placeholder {
+                                color: #ccc;
+                            }
+
+                            .search-form .search-field::placeholder {
+                                color: #ccc;
+                            }
+
+                        .search-form .search-submit {
+                            position: absolute;
+                            top: 0;
+                            right: 0;
+                            bottom: 0;
+                            z-index: 1;
+                            width: 8rem;
+                            cursor: pointer;
+                            text-align: center;
+                            color: #fff;
+                            background-color: #404040;
+                        }
+
+                        .search-form .visually-hidden {
+                            position: absolute;
+                            overflow: hidden;
+                            clip: rect(0 0 0 0);
+                            height: 1px;
+                            width: 1px;
+                            margin: -1px;
+                            padding: 0;
+                            border: 0;
+                        }
+                </style>
+                <div class="container" style="margin-top:30px;">
+
+                    <form role="search" method="get" asp-page="Property" class="search-form">
+                        <label class="visually-hidden">Search for:</label>
+                        <input type="search" class="search-field" placeholder="search Property, Location..." name="searchString" value="@Model.Query" title="Search for:" />
+                        <input type="submit" class="search-submit" value="Search" />
+                    </form>
+
+
                 </div>
+
+                 
             }
             <div class="clearfix"></div>
             <!-- Heading Area -->
@@ -106,22 +175,22 @@
                                                             <h3 style="font-family: 'Berlin Sans FB Demi Bold' !important;">
                                                                 @item.Title
 
-                                                                                                                        <a class="btn btn-success" style="float: right;color: #fff;background-color: #396739;border-color: grey;width: 25%;padding: 5px;">
-                                                                                                                            @if (item.Category.ToLower().Contains("sale"))
-                                                                                                                            {
-                                                                                                                                <span>For Sale</span>
-                                                                                                                            }
-                                                                                                                            else if (item.Category.ToLower().Contains("lease"))
-                                                                                                                            {
-                                                                                                                                <span>Leasing</span>
-                                                                                                                            }
-                                                                                                                            else if (item.Category.ToLower().Contains("rent"))
-                                                                                                                            {
-                                                                                                                                <span>For Rent</span>
-                                                                                                                            }
+                                                                <a class="btn btn-success" style="float: right;color: #fff;background-color: #396739;border-color: grey;width: 25%;padding: 5px;">
+                                                                    @if (item.Category.ToLower().Contains("sale"))
+                                                                    {
+                                                                        <span>For Sale</span>
+                                                                    }
+                                                                    else if (item.Category.ToLower().Contains("lease"))
+                                                                    {
+                                                                        <span>Leasing</span>
+                                                                    }
+                                                                    else if (item.Category.ToLower().Contains("rent"))
+                                                                    {
+                                                                        <span>For Rent</span>
+                                                                    }
 
-                                                                                                                        </a>
-                                                                                                                    </h3>
+                                                                </a>
+                                                            </h3>
                                                         </a>
                                                         <div class="clearfix visible-xs-block"></div>
                                                         <p class="hidden-sm">@item.Description</p>
@@ -134,11 +203,11 @@
 
                                                         </ul>
                                                         <div class="clearfix archive-history">
-                                                           
+
 
                                                             <div class="ad-meta">
                                                                 <a class="btn btn-success" asp-page="./Ppty" asp-route-id="@item.Id" asp-route-ppy="@item.Title.Replace(",", "-").Replace(" ", "-").Replace("/", "-").Replace("@", "-").Replace("&", "-").Replace("#", "-").Replace("_", "-").Replace("--", "-").Replace("--", "-")" style="width: 70%;"><i class="fa fa-phone"></i> Details</a>
-                                                                
+
                                                                 <a class="btn btn-success" href="#" style="float: right;color: #fff;background-color: grey;border-color: grey;">ID: @item.LojourID</a>
                                                             </div>
                                                         </div>
@@ -160,8 +229,9 @@
 
                             </div>
                         </div>
-
-                        <div>
+                        <div class="clearfix"></div>
+                        <div class="clearfix"></div>
+                        <div style="margin-top:20px;">
                             @if (Model.TotalPages > 1)
                             {
                                 <ul class="pagination">
