--- a/LojourProperties.Web/Pages/Shared/Components/HomeSearch/Default.cshtml
+++ b/LojourProperties.Web/Pages/Shared/Components/HomeSearch/Default.cshtml
@@ -1,19 +1,86 @@
-﻿
-<div class="container">
-    <div class="alert-box-container margin-top-30">
-        <div class="well">
+﻿<style>
+    .search-form {
+        position: relative;
+        width: 100%;
+        border: 1px solid black;
+    }
 
-            <form method="get" asp-page="Property">
-                <div class="row">
-                    <div class="col-md-9 col-xs-12 col-sm-12">
-                        <input placeholder="Property, Location" name="searchString" type="text" class="form-control">
-                    </div>
+        .search-form .search-field {
+            display: block;
+            border: none;
+            border-radius: 0;
+            font-size: 3rem;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
+        }
 
-                    <div class="col-md-3 col-xs-12 col-sm-12">
-                        <input class="btn btn-theme btn-block" style="padding: 12px 52px !important;" value="Submit" type="submit">
-                    </div>
-                </div>
-            </form>
-        </div>
-    </div>
+        .search-form .search-submit {
+            display: block;
+            border: none;
+            border-radius: 0;
+            font-size: 1.5rem;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
+        }
+
+        .search-form .search-field {
+            width: 100%;
+            padding: 1.3rem;
+            padding-right: 8.05rem;
+            position: relative;
+            top: 0;
+            border: none;
+            background: #eee;
+            color: #000;
+        }
+
+            .search-form .search-field::-moz-placeholder {
+                color: #ccc;
+            }
+
+            .search-form .search-field:-ms-input-placeholder {
+                color: #ccc;
+            }
+
+            .search-form .search-field::placeholder {
+                color: #ccc;
+            }
+
+        .search-form .search-submit {
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            z-index: 1;
+            width: 8rem;
+            cursor: pointer;
+            text-align: center;
+            color: #fff;
+            background-color: #404040;
+        }
+
+        .search-form .visually-hidden {
+            position: absolute;
+            overflow: hidden;
+            clip: rect(0 0 0 0);
+            height: 1px;
+            width: 1px;
+            margin: -1px;
+            padding: 0;
+            border: 0;
+        }
+</style>
+<div class="container" style="margin-top:30px;">
+
+    <form role="search" method="get" asp-page="Property" class="search-form">
+        <label class="visually-hidden">Search for:</label>
+        <input type="search" class="search-field" placeholder="search Property, Location..." name="searchString" title="Search for:" />
+        <input type="submit" class="search-submit" value="Search" />
+    </form>
+
+ 
 </div>
+
+
