--- a/LojourProperties.Web/Pages/Shared/_Layout.cshtml
+++ b/LojourProperties.Web/Pages/Shared/_Layout.cshtml
@@ -400,10 +400,9 @@
             float: right;
             color: #fff;
             background-color: #396739;
-            border-color: grey;
-            width: 25%;
-            padding: 5px;
+            border-color: grey;  
             border-radius: 5px;
+            margin:4px;
         }
 
         .ad-archive-img {
@@ -416,12 +415,15 @@
             padding: 12px 18px !important;
             border-radius: 5px;
         }
+        .ad-archive-desc ul.short-meta {
+             height: 60px;
+         }
     </style>
 
 </head>
 <body>
     <!-- =-=-=-=-=-=-= Preloader =-=-=-=-=-=-= -->
-    <div class="preloader"></div>
+    <div class="preloader" style=""></div>
 
     <!-- =-=-=-=-=-=-=  Header =-=-=-=-=-=-= -->
     <div class="colored-header">
